version/0.5/_sources/api/ansys/geometry/core/plotting/trame_gui/TrameVisualizer.rst.txt


:class:`TrameVisualizer`
========================

.. py:class:: ansys.geometry.core.plotting.trame_gui.TrameVisualizer(client_type: str = 'vue3')

   
   Defines the trame layout view.


   :Parameters:

       **client_type** : :class:`python:str`, :obj:`optional`
           Client type to use for the trame server. Options are 'vue2' and 'vue3'.
           Default is 'vue3'.














   ..
       !! processed by numpydoc !!


.. py:currentmodule:: TrameVisualizer

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~set_scene`
            - Set the trame layout view and the mesh to show through the PyVista plotter.
          * - :py:attr:`~show`
            - Start the trame server and show the mesh.








Import detail
-------------

.. code-block:: python

    from ansys.geometry.core.plotting.trame_gui import TrameVisualizer



    

Method detail
-------------
.. py:method:: set_scene(plotter: beartype.typing.Union[pyvista.Plotter, ansys.geometry.core.plotting.plotter.Plotter, ansys.geometry.core.plotting.plotter_helper.PlotterHelper])

   
   Set the trame layout view and the mesh to show through the PyVista plotter.


   :Parameters:

       **plotter** : :obj:`Union`\[:obj:`~pyvista.Plotter`, :obj:`~Plotter`, :obj:`~PlotterHelper`]
           PyVista plotter or PyAnsys plotter to render.














   ..
       !! processed by numpydoc !!

.. py:method:: show()

   
   Start the trame server and show the mesh.
















   ..
       !! processed by numpydoc !!


